kubernetes/apps/paperless/paperless-ai/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ai
  namespace: paperless
spec:
  hostnames: ["paperless-ai.unscfleet.com"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: paperless-ai
          namespace: paperless
          port: 3000
